--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -26,7 +26,13 @@
       {% include JB/tags_list %}
     </ul>
   {% endunless %}  
+    <br>
+    <a href="https://twitter.com/eranation" class="twitter-follow-button" data-show-count="false" data-dnt="true">Follow @eranation</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+    <br>
 
+    <br>
+    {% include JB/sharing %}
     <hr>
     <div class="pagination">
       <ul>
@@ -44,6 +50,7 @@
       </ul>
     </div>
     <hr>
+
     {% include JB/comments %}
   </div>
 </div>
