--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -60,7 +60,7 @@
       <footer>
         <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
           with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
-          and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
+          and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a> | not affiliated with TypeSafe / EPFL. 
         </p>
       </footer>
 
