--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -36,36 +36,14 @@
   </head>
 
   <body>
-    <div class="navbar">
-      <div class="navbar-inner">
-        <div class="container-narrow">
-          <span class="logo">
-            <img src="http://www.logomaker.com/logo-images/6ea34cb294150178.gif"/>
-            <a href="http://www.logomaker.com"><img src="http://www.logomaker.com/images/logos.gif" alt="free logo design" border="0"/></a>
-          </span>
-          <a class="brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
-          <ul class="nav">
-            {% assign pages_list = site.pages | sort:"name" %}
-            {% assign group = 'navigation' %}
-            {% include JB/pages_list %}
-          </ul>
-        </div>
-      </div>
-    </div>
+    {% include themes/twitter/header.html %}
 
     <div class="container-narrow">
       <div class="content">
         {{ content }}
       </div>
       <hr>
-      <footer>
-        <p><!-- &copy; {{ site.time | date: '%Y' }} {{ site.author.name }} -->
-          <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/80x15.png" /></a> <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Scala Tutorials</span> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">Creative Commons Attribution 3.0 Unported License</a> |
-
-          with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
-          and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a> | not affiliated with TypeSafe / EPFL. 
-        </p>
-      </footer>
+     {% include themes/twitter/footer.html %}
 
     </div>
 
