remove logo, takes too long to load...

--- a/_includes/themes/twitter/header.html
+++ b/_includes/themes/twitter/header.html
@@ -1,10 +1,10 @@
 <div class="navbar">
       <div class="navbar-inner">
         <div class="container-fluid">
-          <span class="logo">
+          <!--<span class="logo">
             <img src="http://www.logomaker.com/logo-images/6ea34cb294150178.gif"/>
             <a href="http://www.logomaker.com"><img src="http://www.logomaker.com/images/logos.gif" alt="free logo design" border="0"/></a>
-          </span>
+          </span>-->
           <a class="brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
           <ul class="nav">
             {% assign pages_list = site.pages | sort:"name" %}
