--- a/_includes/custom/kata.html
+++ b/_includes/custom/kata.html
@@ -6,7 +6,31 @@
             <button value="Run" name="run" type="submit" class="btn btn-success">
                 <i class="icon-play icon-white"></i>
             </button>
+
         </div>
+         <div class="kata-theme">
+<!--             <select onchange="selectTheme()" id="theme">
+                <option selected>monokai</option>
+                <option>eclipse</option>
+                <option>solarized dark</option>
+            </select> -->
+
+          <div class="btn-group dropup">
+            <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" href="#">
+              Theme
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu theme-select">
+              <li><a tabindex="-1" data-value="monokai" href="#">Monokai</a></li>
+              <li><a tabindex="-1" data-value="solarized dark" href="#">Solarized Dark</a></li>
+              <li><a tabindex="-1" data-value="eclipse" href="#">Eclipse</a></li>
+            </ul>
+          </div>
+
+        </div> 
+        <small class="credits">Code editor is using <a href="http://scalakata.com" target="_blank">Scalakata.com</a> written by <a href="https://github.com/MasseGuillaume" target="_blank">Guillaume Massé</a><!--  | tour by Guillaume, <a href="https://github.com/eranation" target="_blank">Eran Medan</a> and others -->
+           
+        </small>        
     </div>
     <div class="kata-result-window">
         <hr class="kata-vertical-resize-handle">
@@ -19,6 +43,6 @@
         </div>
     </div>
     
-</form>
+    </form>
     </div>
    
