--- a/assets/themes/twitter/scalakata/css/kata.css
+++ b/assets/themes/twitter/scalakata/css/kata.css
@@ -22,6 +22,14 @@
     right: 0;
 }
 
+.kata-theme {
+    z-index: 10000;
+    position: absolute;
+    bottom: 0;
+    left: 0;  
+    margin: 10px; 
+}
+
 .kata-controls button {
     float: right;
     clear: both;
