--- a/assets/themes/twitter/scalakata/webjars/theme/monokai.css
+++ b/assets/themes/twitter/scalakata/webjars/theme/monokai.css
@@ -1,7 +1,7 @@
 /* Based on Sublime Text's Monokai theme */
 
 .cm-s-monokai.CodeMirror {background: #272822; color: #f8f8f2;}
-.CodeMirror-scroll.cm-s-monokai { background: #E6E6E6; color: #1D1D1C; }
+.cm-s-monokai.CodeMirror-scroll { background: #E6E6E6; color: #1D1D1C; }
 .cm-s-monokai div.CodeMirror-selected {background: #49483E !important;}
 .cm-s-monokai .CodeMirror-gutters {background: #171812; border-right: 0px;}
 .cm-s-monokai .CodeMirror-linenumber {color: #d0d0d0;}
@@ -35,10 +35,10 @@
   /*border-right: 1px solid black;*/
 }
 
-.CodeMirror-lines {
+.cm-s-monokai .CodeMirror-lines {
   
   margin-left: 12px;
 }
-.CodeMirror-measure {
+.cm-s-monokai .CodeMirror-measure {
  /* margin-left:10px;*/
 }
