--- a/assets/themes/twitter/scalakata/webjars/theme/solarized.css
+++ b/assets/themes/twitter/scalakata/webjars/theme/solarized.css
@@ -175,7 +175,7 @@ http://ethanschoonover.com/solarized/img/solarized-palette.png
 }
 
 .cm-s-solarized .CodeMirror-lines {
-  padding-left: 5px;
+  /*padding-left: 5px;*/
 }
 
 .cm-s-solarized .CodeMirror-lines .CodeMirror-cursor {
@@ -187,7 +187,7 @@ Active line. Negative margin compensates left padding of the text in the
 view-port
 */
 .cm-s-solarized .activeline {
-  margin-left: -20px;
+  margin-left: -10px;
 }
 
 .cm-s-solarized.cm-s-dark .activeline {
