added tweet button

--- a/_includes/themes/twitter/header.html
+++ b/_includes/themes/twitter/header.html
@@ -10,6 +10,12 @@
             {% assign pages_list = site.pages | sort:"name" %}
             {% assign group = 'navigation' %}
             {% include JB/pages_list %}
+            <li>
+              <span class="tweet-header">
+                <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://scalatutorials.com/tour" data-text="Learn Scala in your browser" data-via="ScalaTutorials" data-related="ScalaTutorials" data-hashtags="scala">Tweet</a>
+                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+              </span>
+            </li>
           </ul>
         </div>
       </div>
