added some steps + overview

--- a/assets/themes/twitter/scalakata/css/kata.css
+++ b/assets/themes/twitter/scalakata/css/kata.css
@@ -34,7 +34,7 @@
     float: right;
     clear: both;
     display: block;
-    margin: 10px;
+    margin: 10px 20px 10px 10px;
 }
 
 .kata-vertical-resize-handle {
