--- a/_includes/themes/twitter/tour.html
+++ b/_includes/themes/twitter/tour.html
@@ -123,7 +123,7 @@
         padding: 5px;
         color: white;
         opacity: 0.5;
-        margin: 10px;
+        margin: 10px 20px 10px 10px;
         z-index: 3;
         {% if page.showFooter == true %}
         margin-bottom:32px;
@@ -161,9 +161,7 @@
             {% endif %}
             <hr>
             <div class="alert alert-error">
-              <strong><i class="icon icon-warning-sign"></i> Note:</strong>
-              This is an alpha, incomplete, draft, work in progress effort.
-              <br>
+              <strong><i class="icon icon-warning-sign"></i> Work in progress:</strong>
               To report errors, comment or contribute please <a href="https://github.com/scalatutorials/scalatutorials.github.io/issues" target="_blank">open an issue</a>
             </div>
                 
@@ -223,7 +221,12 @@
 //3) "complete" will be checked only when pressing "next"
 //4) move to AngularJS, or better handle evnents...
 //5) persist on server, not just local storage (unique link?)
-
+        (function($) {
+            $.fn.hasScrollBar = function() {
+                return this.get(0).scrollHeight > this.height();
+            }
+        })(jQuery);
+        
         $(function(){
           $(".kata-form").openkata({pushState: false});
           $(".theme-select a").click(function() {
@@ -263,7 +266,7 @@
               tocList.empty();
               $.each(data, function (index, value) {
                 var link = $("<a>", {href:value.url}).text(value.title);
-                var li = $("<li>").append(link).append(" (" + value.topic + ")");
+                var li = $("<li>").append(link);//.append(" (" + value.topic + ")");
                 tocList.append(li);
                 
                 if(localStorage) {
