--- a/_includes/themes/twitter/headerTour.html
+++ b/_includes/themes/twitter/headerTour.html
@@ -5,14 +5,14 @@
             <img src="http://www.logomaker.com/logo-images/6ea34cb294150178.gif"/>
             <a href="http://www.logomaker.com"><img src="http://www.logomaker.com/images/logos.gif" alt="free logo design" border="0"/></a>
           </span>-->
-          <a class="brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
+          <a class="brand" href="{{ HOME_PATH }}">{{ site.title }}<small> - Level A1 - Basic Scala Tutorial</small></a>
           <ul class="nav">
-            {% assign pages_list = site.pages | sort:"name" %}
+            {% comment %}{% assign pages_list = site.pages | sort:"name" %}{% endcomment %}
             {% assign group = 'navigation' %}
             {% include JB/pages_list %}
             <li>
               <span class="tweet-header">
-                <a href="https://twitter.com/share" class="twitter-share-button" data-text="Check out these great Scala tutorials!" data-via="ScalaTutorials" data-related="ScalaTutorials" data-hashtags="scala">Tweet</a>
+                <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://scalatutorials.com/tour" data-text="A #Scala tutorial that runs in your browser!" data-via="ScalaTutorials" data-related="ScalaTutorials" data-hashtags="scala">Tweet</a>
                 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
               </span>
             </li>
@@ -22,7 +22,7 @@
                 <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
 
                 <!-- Place this tag where you want the +1 button to render. -->
-                <div class="g-plusone" data-size="medium" data-annotation="bubble"></div>
+                <div class="g-plusone" data-size="medium" data-annotation="bubble" data-href="http://scalatutorials.com"></div>
               </span>
             </li>
           </ul>
