--- a/_includes/themes/twitter/headerTour.html
+++ b/_includes/themes/twitter/headerTour.html
@@ -1,15 +1,26 @@
 <div class="navbar">
-      <div class="navbar-inner">
-        <div class="container-fluid">
-          <!--<span class="logo">
-            <img src="http://www.logomaker.com/logo-images/6ea34cb294150178.gif"/>
-            <a href="http://www.logomaker.com"><img src="http://www.logomaker.com/images/logos.gif" alt="free logo design" border="0"/></a>
-          </span>-->
-          <a class="brand" href="{{ HOME_PATH }}">{{ site.title }}<small> - Level A1 - Basic Scala Tutorial</small></a>
+  <div class="navbar-inner">
+    <div class="container">
+ 
+      <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
+      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </a>
+ 
+      <!-- Be sure to leave the brand out there if you want it shown -->
+      <a class="brand" href="{{ HOME_PATH }}">{{ site.title }}<small> - Basic Scala Tutorial</small></a>
+ 
+      <!-- Everything you want hidden at 940px or less, place within here -->
+      <div class="nav-collapse collapse">
           <ul class="nav">
-            {% comment %}{% assign pages_list = site.pages | sort:"name" %}{% endcomment %}
+            {% comment %}
+            {% assign pages_list = site.pages | sort:"name" %}
             {% assign group = 'navigation' %}
             {% include JB/pages_list %}
+            {% endcomment %}
+            <li><a href="/about.html">About</a></li>
             <li>
               <span class="tweet-header">
                 <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://scalatutorials.com/tour" data-text="A #Scala tutorial that runs in your browser!" data-via="ScalaTutorials" data-related="ScalaTutorials" data-hashtags="scala">Tweet</a>
@@ -25,7 +36,8 @@
                 <div class="g-plusone" data-size="medium" data-annotation="bubble" data-href="http://scalatutorials.com"></div>
               </span>
             </li>
-          </ul>
+          </ul>      
         </div>
-      </div>
-    </div>
+     </div>
+  </div>
+</div>
