--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -14,8 +14,11 @@
 .container-narrow > hr {
   margin: 30px 0; }
 
-.navbar .nav {
-  float: right; }
+@media (min-width: 979px) {
+  .navbar .nav {
+    float: right; 
+  }
+}
 
 /* posts index */
 .post > h3.title {
