--- a/_includes/custom/kata.html
+++ b/_includes/custom/kata.html
@@ -27,22 +27,21 @@
             </ul>
           </div>
 
-        </div> 
+        </div>
         <small class="credits">Code editor is using <a href="http://scalakata.com" target="_blank">Scalakata.com</a> written by <a href="https://github.com/MasseGuillaume" target="_blank">Guillaume Massé</a><!--  | tour by Guillaume, <a href="https://github.com/eranation" target="_blank">Eran Medan</a> and others -->
-           
-        </small>        
+
+        </small>
     </div>
     <div class="kata-result-window">
         <hr class="kata-vertical-resize-handle">
         <div class="CodeMirror">
             <!-- <div class="CodeMirror-scroll cm-s-solarized cm-s-dark"> -->
-            <div class="CodeMirror-scroll cm-s-monokai">
+            <div class="CodeMirror-scroll cm-s-monokai" style="color:white !important; background-color:black !important">
                 <pre class="kata-console"></pre>
                 <pre class="kata-result"></pre>
             </div>
         </div>
     </div>
-    
+
     </form>
     </div>
-   
