--- a/assets/themes/twitter/scalakata/webjars/theme/eclipse.css
+++ b/assets/themes/twitter/scalakata/webjars/theme/eclipse.css
@@ -10,6 +10,7 @@
 .cm-s-eclipse span.cm-property {color: black;}
 .cm-s-eclipse span.cm-operator {color: black;}
 .cm-s-eclipse span.cm-comment {color: #3F7F5F;}
+.cm-s-eclipse span.cm-comment-special {color: darkorange; /*background-color:lightgray;*/}
 .cm-s-eclipse span.cm-string {color: #2A00FF;}
 .cm-s-eclipse span.cm-string-2 {color: #f50;}
 .cm-s-eclipse span.cm-error {color: #f00;}
